--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,38 @@ dependencies = [
     "pandas>=2.2.3",
     "requests>=2.32.3",
 ]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "ruff>=0.9.6",
+]
+
+[tool.ruff]
+line-length = 88
+select = ["E", "F", "W", "C90"]
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
